--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-native-xml2js": "^1.0.3",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "xml2js": "^0.6.2"
