--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.6",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4",
     "xml2js": "^0.6.2"
   },
