--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-native-xml2js": "^1.0.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
